--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,13 @@ classifiers:
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
-    License :: OSI Approved :: BSD License
-    Topic :: Terminals
+    Topic :: Software Development :: Libraries
 license: BSD-3-Clause
 license_file: LICENSE.txt
 description: Library for working with ANSI Escape Sequences in a terminal.
