--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name: ansictrls
 version: 0.1.1
 url: https://andreas19.github.io/ansictrls/
 project_urls: Source code=https://github.com/andreas19/ansictrls/
-author: Andreas19
+author: Andreas Suhre
 author_email: andreas19@posteo.eu
 classifiers:
     Development Status :: 4 - Beta
